# robot-stationary-fusion

./: .gitignore  README.md
sensors_fusion_test/: CMakeLists.txt  package.xml
sensors_fusion_test/test/: odometer_publisher_test.cpp  range_publisher_test.cpp  spsc_queue_test.cpp  stationary_detector_test.cpp
udemy_ros2_pkg/: CMakeLists.txt  package.xml
udemy_ros2_pkg/include/udemy_ros2_pkg/: SPSCQueue.hpp  csv_telemetry_reader.hpp  odometer_publisher_demo.hpp  range_publisher_demo.hpp  sensor_fusion_gconstants.hpp  static_stationary_detector.hpp
udemy_ros2_pkg/launch/: sensors_fusion.launch.py
udemy_ros2_pkg/src/: csv_telemetry_reader.hpp  ekf_test.csv  odometer_publisher_demo.cpp  odometer_publisher_demo.hpp  odometer_publisher_demo_main.cpp  range_publisher_demo.cpp  range_publisher_demo.hpp  range_publisher_demo_main.cpp  robot_status_subscriber_simulator.cpp  sensor_fusion_gconstants.hpp  static_stationary_detector.cpp  static_stationary_detector.hpp  stationary_detector_publisher.cpp  stationary_detector_publisher.hpp  stationary_detector_publisher_main.cpp
